# efficient-implied-alignment

./: .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  README.md  cabal.project  commutative-multi-string-alignment.cabal  efficient-implied-alignment.cabal  makefile  plot-figure.py  replicate-results.sh  runtime-linear-model.R  stack.yaml
.github/actions/spelling/: excludes.txt
.github/actions/spelling/allow/: Domain-Terms.txt  Haskell.txt  Programming.txt
.github/actions/spelling/patterns/: abreviations.txt  genetic-sequences.txt  other.txt
.github/workflows/: haskell.yaml
app/: FileInput.hs  InputParser.hs  Main.hs  SampleData.hs  UserInput.hs  draw-figure.hs  draw-pre-order-figure.hs  newick-add-delete-taxon.hs  reduce-fasta.hs
app/generate-timings/: InputParser.hs  Main.hs  TimingParameters.hs
app/implied-align/: InputParser.hs  Main.hs
app/tree-align/: InputParser.hs  Main.hs
config/: .MegaLinter.yaml  .hlint.yaml  .weeder.dhall  cabal.project.CI  cabal.project.lowest  cabal.project.release
data-sets/: fungi.tree  metazoa.tree  pathological.afasta  pathological.tree  tcm-12.tcm  tcm-21.tcm  tcm-31.tcm
doc/: CHANGELOG.md  README.md
src/: Alignment.hs
src/Alignment/: Internal.hs  Pairwise.hs
src/Alignment/Pairwise/: Internal.hs  NeedlemanWunsch.hs  Ukkonen.hs  UnboxedUkkonen.hs
src/Alignment/Pairwise/Ukkonen/: Internal.hs  Matrix.hs  Ribbon.hs  Unboxed.hs
src/Data/: Alphabet.hs  BTree.hs  DecTree.hs  Decoration.hs  SymbolString.hs  TCM.hs  UserInput.hs
src/Data/Alphabet/: IUPAC.hs  Internal.hs
src/Data/Decoration/: Class.hs  Internal.hs  Leaf.hs  Node.hs
src/Data/List/: Utility.hs
src/Data/Matrix/: ZeroIndexed.hs
src/Data/Vector/: NonEmpty.hs
src/Data/Vector/Unboxed/: NonEmpty.hs
src/File/: Input.hs  Output.hs
src/File/Format/: Fasta.hs  Fastc.hs  Newick.hs  TransitionCostMatrix.hs
src/File/Format/Fasta/: Internal.hs  Parser.hs  Test.hs
src/File/Format/Fastc/: Internal.hs  Parser.hs
src/File/Format/Newick/: Internal.hs  Parser.hs
src/File/Format/TransitionCostMatrix/: Parser.hs
src/Numeric/: Extended.hs
src/Numeric/Extended/: Internal.hs  Natural.hs  Real.hs
src/System/: Timing.hs
src/Text/Megaparsec/: Custom.hs
test/: SampleData.hs  TestPrint.hs  TestSuite.hs  TestTrees.hs
test/Alignment/Pairwise/: Test.hs
test/Test/: NucleotideSequence.hs
tex/: Efficient-Implied-Alignment.tex  big-refs-3.bib  example-preorder.eps  make-eps.txt
