name:           commutative-multi-string-alignment
version:        0.1.0.0
description:    Proof of concept of efficient multiple string alignment
category:       Algorithms
homepage:       https://github.com/githubuser/commutative-multi-string-alignment#readme
bug-reports:    https://github.com/githubuser/commutative-multi-string-alignment/issues
author:         Alex Washburn
maintainer:     github@recursion.ninja
copyright:      2018 Alex Washburn
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10


extra-source-files:
    ChangeLog.md
    README.md


source-repository head
  type: git
  location: https://github.com/githubuser/commutative-multi-string-alignment


library

  hs-source-dirs:
      src

  build-depends:
      base >=4.7 && <5
    , bimap
    , bv-little
    , case-insensitive
    -- >=0.5.8 Required for Data.Map.restrictKeys
    , containers         >=0.5.8
    , deepseq
    , hashable
    , keys
    , lens
    , matrix
    , megaparsec         >=6.3
    , mono-traversable   >=1.0
    , mtl
    , QuickCheck
    , scientific
    , semigroupoids
    , semigroups
    , text
    , transformers
    , unordered-containers
    , vector
    -- >=3.4 required for corrected definition of (!) & index
    , vector-instances >=3.4

  exposed-modules:
      Data.Alphabet
      Data.Alphabet.IUPAC
      File.Format.Fastc
      File.Format.Newick
      File.Format.TransitionCostMatrix

  other-modules:
      Data.Alphabet.Internal
      Data.List.Utility
      Data.Matrix.ZeroIndexed
      Data.Vector.NonEmpty
      File.Format.Fastc.Internal
      File.Format.Fastc.Parser
      File.Format.Newick.Internal
      File.Format.Newick.Parser
      File.Format.TransitionCostMatrix.Parser
      Text.Megaparsec.Custom

  default-language: Haskell2010

  
executable tree-align

  main-is: Main.hs

  hs-source-dirs:
      app

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5
    , commutative-multi-string-alignment
    , optparse-applicative

  other-modules:
      Paths_commutative_multi_string_alignment

  default-language: Haskell2010

  
test-suite test-align

  type: exitcode-stdio-1.0

  main-is: Spec.hs

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5
    , commutative-multi-string-alignment

  other-modules:
      Paths_commutative_multi_string_alignment

  default-language: Haskell2010
