cabal-version:  2.2
category:       Algorithms
build-type:     Simple

name:           efficient-implied-alignment
version:        0.1.0

author:         Alex Washburn
maintainer:     github@recursion.ninja
copyright:      2018 Alex Washburn
license:        BSD-3-Clause
license-file:   LICENSE

synopsis:       Proof of concept of efficient multiple string alignment

description:    Using a commutative, binary string alignment operator and a
                binary tree with strings on the leaf nodes, we can efficiently
                derive the a multiple string alignment of the implied by the
                binary tree. Requires a pot-order then preorder traversal.
                Post-order traversal should be worst case /O(n*k^2)/, average
                case /O(n*k*log(k))/ and the pre-order traversal should be
                /O(n*k)/.

homepage:       https://github.com/githubuser/efficient-implied-alignment#readme
bug-reports:    https://github.com/githubuser/efficient-implied-alignment/issues
                
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/efficient-implied-alignment


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
--    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind



library

  import:
      ghc-flags

  hs-source-dirs:
      src

  build-depends:
      base >=4.7 && <5
    , bimap
    -- >=0.5.8 Required for Data.Map.restrictKeys
    , containers       >=0.5.8
    , deepseq
    , hashable
    , integer-gmp
    , keys
    , lens
    , matrix
    , megaparsec         >=6.3
    , mtl
    , parser-combinators >=0.4
    , pointed
    , QuickCheck
    , semigroupoids
    , semigroups
    , transformers
    , validation
    , vector
    -- >=3.4 required for corrected definition of (!) & index
    , vector-instances >=3.4

  exposed-modules:
      Alignment
      Alignment.Pairwise
      Data.Alphabet
      Data.Alphabet.IUPAC
      Data.BTree            
      Data.Decoration
      Data.DecTree
      Data.Matrix.ZeroIndexed
      Data.SymbolString
      Data.TCM
      Data.UserInput
      Data.Vector.NonEmpty
      File.Format.Fasta
      File.Format.Newick
      File.Format.TransitionCostMatrix
      File.Input
      File.Output
      System.Timing

  other-modules:
      Alignment.Internal
      Alignment.Pairwise.Internal
      Alignment.Pairwise.NeedlemanWunsch
      Alignment.Pairwise.Ukkonen
      Alignment.Pairwise.Ukkonen.Internal
      Alignment.Pairwise.Ukkonen.Matrix
      Alignment.Pairwise.Ukkonen.Ribbon
      Data.Alphabet.Internal
      Data.Decoration.Class
      Data.Decoration.Internal
      Data.Decoration.Leaf
      Data.Decoration.Node
      Data.List.Utility
      File.Format.Fasta.Internal
      File.Format.Fasta.Parser
      File.Format.Newick.Internal
      File.Format.Newick.Parser
      File.Format.TransitionCostMatrix.Parser
      Numeric.Extended.Internal
      Numeric.Extended.Natural
      Text.Megaparsec.Custom

  default-language: Haskell2010

  
executable tree-align

  import:  ghc-flags

  main-is: Main.hs

  hs-source-dirs:
      app/tree-align

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      ansi-wl-pprint
    , base       >=4.7 && <5
    , efficient-implied-alignment
    , deepseq
    , keys
    , lens
    , optparse-applicative
    , semigroupoids

  other-modules:
      Paths_efficient_implied_alignment
      InputParser

  default-language: Haskell2010

  
executable generate-timings

  import:  ghc-flags

  main-is: Main.hs

  hs-source-dirs:
      app/generate-timings

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      ansi-wl-pprint
    , base       >=4.7 && <5
    , efficient-implied-alignment
    , containers         >=0.5.8
    , Decimal          
    , deepseq
    , directory
    , filepath                    
    , keys
    , lens
    , megaparsec         >=7.0
    , optparse-applicative
    , process          
    , scientific          
    , semigroupoids

  default-language: Haskell2010

  other-modules:
    InputParser
    TimingParameters
  
executable newick-add-delete-taxon

  import:  ghc-flags

  main-is: newick-add-delete-taxon.hs

  hs-source-dirs:
      app

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      ansi-wl-pprint
    , base       >=4.7 && <5
    , efficient-implied-alignment
    , deepseq
    , directory
    , filepath                    
    , keys
    , lens
    , megaparsec         >=7.0
    , MissingH          
    , optparse-applicative
    , process          
    , scientific          
    , semigroupoids
    , split
    , vector

  default-language: Haskell2010

  
executable draw-figure

  import:  ghc-flags

  main-is: draw-figure.hs

  hs-source-dirs:
      app

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      ansi-wl-pprint
    , base       >=4.7 && <5
    , efficient-implied-alignment
    , deepseq
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , directory
    , filepath                    
    , keys
    , lens
    , megaparsec         >=7.0
    , MissingH          
    , optparse-applicative
    , process          
    , scientific          
    , semigroupoids
    , split
    , vector

  default-language: Haskell2010

  
executable reduce-fasta

  import:  ghc-flags

  main-is: reduce-fasta.hs

  hs-source-dirs:
      app

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      ansi-wl-pprint
    , base       >=4.7 && <5
    , efficient-implied-alignment
    , deepseq
    , directory
    , filepath                    
    , keys
    , lens
    , megaparsec         >=7.0
    , optparse-applicative
    , process          
    , scientific          
    , semigroupoids
    , split

  default-language: Haskell2010

  
test-suite test-align

  type: exitcode-stdio-1.0

  main-is: TestPrint.hs

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      efficient-implied-alignment
    , base       >=4.7 && <5
    , containers >=0.5.8
    , deepseq
    , keys
    , lens
    , pointed
    , semigroupoids
    , validation

  other-modules:
      Paths_efficient_implied_alignment
      SampleData

  default-language: Haskell2010


test-suite test-trees

  type: exitcode-stdio-1.0

  main-is: TestTrees.hs

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      efficient-implied-alignment
    , base       >=4.7 && <5
    , efficient-implied-alignment
    , containers >=0.5.8
    , deepseq
    , keys
    , lens
    , pointed
    , semigroupoids
    , tasty
    , tasty-hunit
    , validation

  other-modules:
      Paths_efficient_implied_alignment
      SampleData

  default-language: Haskell2010


test-suite test-suite

  type: exitcode-stdio-1.0

  main-is: TestSuite.hs

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      efficient-implied-alignment
    , base       >=4.7 && <5
    , bimap
    , efficient-implied-alignment
    , containers >=0.5.8
    , deepseq
    , keys
    , lens
    , pointed
    , QuickCheck
    , semigroupoids
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , validation

  other-modules:
      Alignment.Pairwise.Test
      SampleData
      Test.NucleotideSequence

  default-language: Haskell2010
