cabal-version:  2.2
category:       Algorithms
build-type:     Simple

name:           efficient-implied-alignment
version:        1.0.0

author:         Alex Washburn
maintainer:     github@recursion.ninja
copyright:      2020 Alex Washburn
license:        BSD-3-Clause
license-file:   LICENSE

synopsis:       Proof of concept of efficient multiple string alignment

description:    Using a commutative, binary string alignment operator and a
                binary tree with strings on the leaf nodes, we can efficiently
                derive the a multiple string alignment of the implied by the
                binary tree. Requires a post-order then preorder traversal.
                Post-order traversal should be worst case /O(n*k^2)/, average
                case /O(n*k*log(k))/ and the pre-order traversal should be
                /O(n*k)/.

homepage:       https://github.com/recursion-ninja/efficient-implied-alignment#readme
bug-reports:    https://github.com/recursion-ninja/efficient-implied-alignment/issues

tested-with:
    GHC == 8.8.4
    GHC == 8.10.4
    GHC == 9.0.1
                
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/recursion-ninja/efficient-implied-alignment


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
--    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind

  if impl(ghc >= 8.10)
    ghc-options:
      -Wderiving-defaults
      -Wunused-packages


library

  import:
      ghc-flags

  hs-source-dirs:
      src

  build-depends:
      base >=4.7 && <5
    , bimap
    , case-insensitive          
    , containers         >=0.5.8
    , deepseq
    , dlist          
    , hashable
    , integer-gmp
    , keys
    , lens
    , matrices
    , megaparsec         >=8.0
    , monad-loops          
    , mtl
    , parser-combinators >=1.2
    , pointed
    , primitive          >=0.7
    , QuickCheck
    , scientific
    , semigroupoids
    , text               >=1.2
    , transformers
    , validation
    , vector
    , vector-instances >=3.4

  exposed-modules:
      Alignment
      Alignment.Pairwise
      Data.Alphabet
      Data.Alphabet.IUPAC
      Data.BTree            
      Data.Decoration
      Data.DecTree
      Data.SymbolString
      Data.TCM
      Data.UserInput
      Data.Vector.NonEmpty
      Data.Vector.Unboxed.NonEmpty
      File.Format.Fasta
      File.Format.Newick
      File.Format.TransitionCostMatrix
      File.Input
      File.Output
      System.Timing

  other-modules:
      Alignment.Internal
      Alignment.Pairwise.Internal
      Alignment.Pairwise.NeedlemanWunsch
      Alignment.Pairwise.Ukkonen
      Alignment.Pairwise.UnboxedUkkonen
      Alignment.Pairwise.Ukkonen.Internal
      Alignment.Pairwise.Ukkonen.Matrix
      Alignment.Pairwise.Ukkonen.Ribbon
      Data.Alphabet.Internal
      Data.Decoration.Class
      Data.Decoration.Internal
      Data.Decoration.Leaf
      Data.Decoration.Node
      Data.List.Utility
      File.Format.Fasta.Internal
      File.Format.Fasta.Parser
      File.Format.Newick.Internal
      File.Format.Newick.Parser
      File.Format.TransitionCostMatrix.Parser
      Numeric.Extended.Internal
      Numeric.Extended.Natural
      Text.Megaparsec.Custom

  default-language: Haskell2010

  
executable implied-align

  import:  ghc-flags

  main-is: Main.hs

  hs-source-dirs:
      app/implied-align

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      efficient-implied-alignment
    , ansi-wl-pprint
    , base       >=4.7 && <5
    , deepseq
    , keys
    , lens
    , optparse-applicative
    , semigroupoids
    , text

  other-modules:
      Paths_efficient_implied_alignment
      InputParser

  default-language: Haskell2010

  
executable generate-timings

  import:  ghc-flags

  main-is: Main.hs

  hs-source-dirs:
      app/generate-timings

  build-depends:
      efficient-implied-alignment
    , ansi-wl-pprint
    , base       >=4.7 && <5
    , containers         >=0.5.8
    , Decimal          
    , deepseq
    , directory
    , filepath                    
    , keys
    , megaparsec         >=7.0
    , optparse-applicative
    , process          
    , semigroupoids

  default-language: Haskell2010

  other-modules:
    InputParser
    TimingParameters
  
executable newick-add-delete-taxon

  import:  ghc-flags

  main-is: newick-add-delete-taxon.hs

  hs-source-dirs:
      app

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      base       >=4.7 && <5
    , keys
    , split

  default-language: Haskell2010

  
executable draw-pre-order-figure

  import:  ghc-flags

  main-is: draw-pre-order-figure.hs

  hs-source-dirs:
      app

  ghc-options: -g
--               -threaded -rtsopts -with-rtsopts=-N -g

  build-depends:
      base       >=4.7 && <5
    , diagrams-lib
    , diagrams-svg
    , keys
    , lens

  default-language: Haskell2010

  
executable reduce-fasta

  import:  ghc-flags

  main-is: reduce-fasta.hs

  hs-source-dirs:
      app

  build-depends:
      base       >=4.7 && <5
    , keys

  default-language: Haskell2010

  
test-suite test-align

  type: exitcode-stdio-1.0

  main-is: TestPrint.hs

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      efficient-implied-alignment
    , base       >=4.7 && <5
    , containers >=0.5.8
    , deepseq
    , keys
    , lens
    , matrices
    , pointed
    , semigroupoids
    , text
    , validation

  other-modules:
      Paths_efficient_implied_alignment
      SampleData

  default-language: Haskell2010


test-suite test-trees

  type: exitcode-stdio-1.0

  main-is: TestTrees.hs

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      efficient-implied-alignment
    , base       >=4.7 && <5
    , containers >=0.5.8
    , deepseq
    , keys
    , lens
    , matrices
    , pointed
    , semigroupoids
    , tasty
    , tasty-hunit
    , text
    , validation

  other-modules:
      Paths_efficient_implied_alignment
      SampleData

  default-language: Haskell2010


test-suite test-suite

  type: exitcode-stdio-1.0

  main-is: TestSuite.hs

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      efficient-implied-alignment
    , base       >=4.7 && <5
    , bimap
    , containers >=0.5.8
    , deepseq
    , keys
    , lens
    , matrices
    , pointed
    , QuickCheck
    , semigroupoids
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , text
    , validation

  other-modules:
      Alignment.Pairwise.Test
      SampleData
      Test.NucleotideSequence

  default-language: Haskell2010
