cabal-version:  3.0
category:       Algorithms
build-type:     Simple

name:           efficient-implied-alignment
version:        1.2.0

author:         Alex Washburn
maintainer:     github@recursion.ninja
copyright:      2019 Alex Washburn
license:        BSD-3-Clause
license-file:   doc/LICENSE

synopsis:       Proof of concept of efficient multiple string alignment

description:    Using a commutative, binary string alignment operator and a
                binary tree with strings on the leaf nodes, we can efficiently
                derive the a multiple string alignment of the implied by the
                binary tree. Requires a post-order then preorder traversal.
                Post-order traversal should be worst case /O(n*k^2)/, average
                case /O(n*k*log(k))/ and the pre-order traversal should be
                /O(n*k)/.

homepage:       https://github.com/recursion-ninja/efficient-implied-alignment
bug-reports:    https://github.com/recursion-ninja/efficient-implied-alignment/issues

tested-with:
    GHC == 8.10.7
    GHC == 9.0.2
    GHC == 9.2.4
    GHC == 9.4.2

extra-source-files:
    doc/CHANGELOG.md
    doc/LICENSE
    doc/README.md

source-repository head
  type: git
  location: https://github.com/recursion-ninja/efficient-implied-alignment


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common parameters-basic

  default-language:
    Haskell2010

  ghc-options:
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j

    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -fmax-simplifier-iterations=16
    -foptimal-applicative-do
    -fspec-constr-count=8
    -fspec-constr-keen
    -fspecialize-aggressively
    -fstatic-argument-transformation

    -- Sanity check warnings
    --   1. Include all warnings by default
    -Weverything
    -Werror
    --   2. Exclude the undesirable warnings
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe

--  if impl(ghc >= 8.10)
--    ghc-options:
--      -Wderiving-defaults
--      -Wunused-packages

  if impl(ghc >=9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >=9.4)
    ghc-options:
      -Wredundant-strictness-flags


common parameters-multi-threaded

  import:
    parameters-basic

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


common parameters-test-suite

  import:
    parameters-multi-threaded

  hs-source-dirs:
    test


library

  import:
    parameters-basic

  hs-source-dirs:
    src

  build-depends:
    base                          >= 4.14 && < 5,
    bimap                         >= 0.3.1,
    containers                    >= 0.6.0.1,
    deepseq                       >= 1.4.4,
    dlist                         >= 0.8.0.7,
    hashable                      >= 1.3.0.0,
    keys                          >= 3.12.2,
    lens                          >= 5,
    matrices                      >= 0.5.0,
    megaparsec                    >= 9.0.1,
    monad-loops                   >= 0.4.2,
    mtl                           >= 2.2.2,
    parser-combinators            >= 1.0.0,
    pointed                       >= 5.0.1,
    primitive                     >= 0.7.0.0,
    QuickCheck                    >= 2.13.2,
    scientific                    >= 0.3.5.3,
    semigroupoids                 >= 5.3.2,
    text                          >= 1.2.3.2,
    validation                    >= 1.1.1,
    vector                        >= 0.12.1.2,
    vector-instances              >= 3.4,

  if impl(ghc < 9.0)
    build-depends:
      integer-gmp

  exposed-modules:
    Alignment
    Alignment.Pairwise
    Data.Alphabet
    Data.Alphabet.IUPAC
    Data.BTree
    Data.Decoration
    Data.DecTree
    Data.SymbolString
    Data.TCM
    Data.UserInput
    Data.Vector.NonEmpty
    Data.Vector.Unboxed.NonEmpty
    File.Format.Fasta
    File.Format.Newick
    File.Format.TransitionCostMatrix
    File.Input
    File.Output
    System.Timing

  other-modules:
    Alignment.Internal
    Alignment.Pairwise.Internal
    Alignment.Pairwise.NeedlemanWunsch
    Alignment.Pairwise.Ukkonen
    Alignment.Pairwise.Ukkonen.Unboxed
    Data.Alphabet.Internal
    Data.Decoration.Class
    Data.Decoration.Internal
    Data.Decoration.Leaf
    Data.Decoration.Node
    Data.List.Utility
    File.Format.Fasta.Internal
    File.Format.Fasta.Parser
    File.Format.Newick.Internal
    File.Format.Newick.Parser
    File.Format.TransitionCostMatrix.Parser
    Numeric.Extended.Internal
    Numeric.Extended.Natural
    Text.Megaparsec.Custom


executable implied-align

  import:
    parameters-multi-threaded

  main-is:
    Main.hs

  hs-source-dirs:
    app/implied-align

  build-depends:
    efficient-implied-alignment,
    ansi-wl-pprint                >= 0.6.8,
    base                          >= 4.14 && < 5,
    deepseq                       >= 1.4.4,
    keys                          >= 3.12.2,
    lens                          >= 5,
    optparse-applicative          >= 0.15.0.0,
    semigroupoids                 >= 5.3.2,
    text                          >= 1.2.3.2,

  other-modules:
    Paths_efficient_implied_alignment
    InputParser


executable generate-timings

  import:
    parameters-multi-threaded

  main-is:
    Main.hs

  hs-source-dirs:
    app/generate-timings

  build-depends:
    efficient-implied-alignment,
    ansi-wl-pprint                >= 0.6.8,
    base                          >= 4.14 && < 5,
    containers                    >= 0.6.0.1,
    Decimal                       >= 0.3.1,
    deepseq                       >= 1.4.4,
    directory                     >= 1.3.6,
    filepath                      >= 1.4.2,
    keys                          >= 3.12.2,
    megaparsec                    >= 9.0.1,
    optparse-applicative          >= 0.15.0.0,
    process                       >= 1.6.8.2,
    semigroupoids                 >= 5.3.2,

  other-modules:
    InputParser
    TimingParameters


executable newick-add-delete-taxon

  import:
    parameters-basic

  main-is:
    newick-add-delete-taxon.hs

  hs-source-dirs:
    app

  build-depends:
    base                          >= 4.14 && < 5,
    keys                          >= 3.12.2,
    split                         >= 0.2.3.4,


executable draw-pre-order-figure

  import:
    parameters-multi-threaded

  main-is:
    draw-pre-order-figure.hs

  hs-source-dirs:
    app

  build-depends:
    base                          >= 4.14 && < 5,
    diagrams-lib                  >= 1.4.4,
    diagrams-svg                  >= 1.4.3,
    keys                          >= 3.12.2,


executable reduce-fasta

  import:
    parameters-basic

  main-is:
    reduce-fasta.hs

  hs-source-dirs:
    app

  build-depends:
    base                          >= 4.14 && < 5,
    keys                          >= 3.12.2,


test-suite test-align

  import:
    parameters-test-suite

  type:
    exitcode-stdio-1.0

  main-is:
    TestPrint.hs

  build-depends:
    efficient-implied-alignment,
    base                          >= 4.14 && < 5,
    containers                    >= 0.6.0.1,
    deepseq                       >= 1.4.4,
    keys                          >= 3.12.2,
    lens                          >= 5,
    matrices                      >= 0.5.0,
    semigroupoids                 >= 5.3.2,
    text                          >= 1.2.3.2,
    validation                    >= 1.1.1,

  other-modules:
    Paths_efficient_implied_alignment
    SampleData


test-suite test-trees

  import:
    parameters-test-suite

  type:
    exitcode-stdio-1.0

  main-is:
    TestTrees.hs

  build-depends:
    efficient-implied-alignment,
    base                          >= 4.14 && < 5,
    containers                    >= 0.6.0.1,
    deepseq                       >= 1.4.4,
    keys                          >= 3.12.2,
    lens                          >= 5,
    matrices                      >= 0.5.0,
    semigroupoids                 >= 5.3.2,
    tasty                         >= 1.2,
    tasty-hunit                   >= 0.10,
    text                          >= 1.2.3.2,
    validation                    >= 1.1.1,

  other-modules:
    Paths_efficient_implied_alignment
    SampleData


test-suite test-suite

  import:
    parameters-test-suite

  type:
    exitcode-stdio-1.0

  main-is:
    TestSuite.hs

  build-depends:
    efficient-implied-alignment,
    base                          >= 4.14 && < 5,
    bimap                         >= 0.3.1,
    containers                    >= 0.6.0.1,
    keys                          >= 3.12.2,
    matrices                      >= 0.5.0,
    QuickCheck                    >= 2.13.2,
    semigroupoids                 >= 5.3.2,
    smallcheck                    >= 1.1,
    tasty                         >= 1.2,
    tasty-quickcheck              >= 0.8.4,
    tasty-smallcheck              >= 0.8,
    text                          >= 1.2.3.2,

  other-modules:
    Alignment.Pairwise.Test
    SampleData
    Test.NucleotideSequence
